# steady-path

./: .gitignore  README.md
SteadyPathApp/: pill-widgetExtension.entitlements
SteadyPathApp/SteadyPath/: ContentView.swift  Info.plist  Item.swift  Secrets.swift  SteadyPathApp.swift
SteadyPathApp/SteadyPath.xcodeproj/: project.pbxproj
SteadyPathApp/SteadyPath/Models/: CheckInSession.swift
SteadyPathApp/SteadyPath/Networking/: APIClient.swift
SteadyPathApp/SteadyPath/Shared/: SharedDataManager.swift
SteadyPathApp/SteadyPath/Speech/: SpeechRecognizer.swift  SpeechSynthesizer.swift
SteadyPathApp/SteadyPath/SteadyPathUI/: SteadyPath.swift
SteadyPathApp/SteadyPathTests/: SteadyPathTests.swift
SteadyPathApp/SteadyPathUITests/: SteadyPathUITests.swift  SteadyPathUITestsLaunchTests.swift
SteadyPathApp/pill/: AppIntent.swift  pill.swift  pillBundle.swift  pillControl.swift  pillLiveActivity.swift
SteadyPathApp/pill-widget/: AppIntent.swift  pill_widget.swift  pill_widgetBundle.swift  pill_widgetControl.swift
server/: .gitignore  app.py  audio_test.m4a  pyproject.toml  steadypath.db  test_checkin.py
server/app/: ai_analysis.py  audio_utils.py  db.py
steady path/pill-widget/: pill_widget.swift  pill_widgetBundle.swift  pill_widgetControl.swift  pill_widgetLiveActivity.swift
steady path/steady path/: ContentView.swift  Item.swift  steady_pathApp.swift
steady path/steady path.xcodeproj/: project.pbxproj
steady path/steady pathTests/: steady_pathTests.swift
steady path/steady pathUITests/: steady_pathUITests.swift  steady_pathUITestsLaunchTests.swift
(+35 files in other folders)
